--- a/css/styles.css
+++ b/css/styles.css
@@ -54,24 +54,18 @@
 }
 
 .myMain li {
-	justify-content: space-between;
 	background-color: #F8F8F8;
-	flex-direction: column;
-	box-sizing: border-box;
-	align-content: center;
 	border-radius: 10px;
-	align-items: center;
 	list-style: none;
 	margin: 0 7vw;
-	display: flex;
 	height: 275px;
 	width: 207px;
 }
 
 .imageCard {
-	height: 60%;
 	border-radius: 10px 10px 0 0;
-	width: 207px;
+	height: 60%;
+	width: 100%;
 }
 
 .sectionFrames {
@@ -91,7 +85,6 @@
 }
 
 .framesList li h4 {
-	display: inline-block;
 	text-align: center;
 	color: #1B1B1B;
 	font-weight: 500;
@@ -100,7 +93,7 @@
 }
 
 .framesList li p {
-	margin: 10px 15px;
+	text-align: center;
 	font-weight: 400;
 	font-size: 16px;
 	color: #868383;
@@ -123,7 +116,6 @@
 }
 
 .figuresList li h4 {
-	display: inline-block;
 	text-align: center;
 	color: #1B1B1B;
 	font-weight: 500;
@@ -132,7 +124,7 @@
 }
 
 .figuresList li p {
-	margin: 10px 15px;
+	text-align: center;
 	font-weight: 400;
 	color: #868383;
 	font-size: 16px;
